Further testing in LDA's unit test