@@ -88,43 +88,68 @@ public class LDATest {
 		esv.add(known2);
 		LDA classifier = new LDA();
 		List<Pair<String, Double>> t = classifier.analyze(unknown, esv);
-		String r = t.get(0).getFirst();
-		String s = "Mary";
-		System.out.println("Test 1 Classified");
-		System.out.println("First : "+r+" "+t.get(0).getSecond());
-		if(t.size() > 1){
-			System.out.println("Second: "+t.get(1).getFirst()+" "+t.get(1).getSecond());
-		}
+		String author1 = t.get(0).getFirst();
+		String author2 = t.get(1).getFirst();
+		Double val1 = t.get(0).getSecond();
+		Double val2 = t.get(1).getSecond();
+		/*System.out.println("Test 1 Classified");
+		System.out.println("First : "+author1+" "+t.get(0).getSecond());
+		System.out.println("Second: "+author2+" "+t.get(1).getSecond());
 		System.out.println("Expected");
 		System.out.println("First : Mary");
-		System.out.println("Second: Peter");
-		assertTrue(r.equals(s));
+		System.out.println("Second: Peter");*/
+		assertTrue(author1.equals("Mary"));
 
 		//Test 2 - Same classifier
+		//Testing for persistence
 		t = classifier.analyze(unknown,esv);
-		r = t.get(0).getFirst();
-		System.out.println("Test 2 Classified");
-		System.out.println("First : "+r+" "+t.get(0).getSecond());
-		if(t.size() > 1){
-			System.out.println("Second: "+t.get(1).getFirst()+" "+t.get(1).getSecond());
-		}
+		/*System.out.println("Test 2 Classified");
+		System.out.println("First : "+t.get(0).getFirst()+" "+t.get(0).getSecond());
+		System.out.println("Second: "+t.get(1).getFirst()+" "+t.get(1).getSecond());
 		System.out.println("Expected");
 		System.out.println("First : Mary");
-		System.out.println("Second: Peter");
-		assertTrue(r.equals(s));
+		System.out.println("Second: Peter");*/
+		assertTrue(author1.equals(t.get(0).getFirst()) && Math.abs(val1 - t.get(0).getSecond()) < .000001
+				&& author2.equals(t.get(1).getFirst()) && Math.abs(val2 - t.get(1).getSecond()) < .000001);
 		
 		//Test 3 - Different instance of classifier
+		//Again testing for persistence
 		t = new LDA().analyze(unknown, esv);
-		r = t.get(0).getFirst();
-		System.out.println("Test 3 Classified");
+		//String r = t.get(0).getFirst();
+		/*System.out.println("Test 3 Classified");
 		System.out.println("First : "+r+" "+t.get(0).getSecond());
-		if(t.size() > 1){
-			System.out.println("Second: "+t.get(1).getFirst()+" "+t.get(1).getSecond());
-		}
+		System.out.println("Second: "+t.get(1).getFirst()+" "+t.get(1).getSecond());
 		System.out.println("Expected");
 		System.out.println("First : Mary");
-		System.out.println("Second: Peter");
-		assertTrue(r.equals(s));
+		System.out.println("Second: Peter");*/
+		assertTrue(author1.equals(t.get(0).getFirst()) && Math.abs(val1 - t.get(0).getSecond()) < .000001
+				&& author2.equals(t.get(1).getFirst()) && Math.abs(val2 - t.get(1).getSecond()) < .000001);
+		
+		//Test 4 - two unknowns
+		EventSet unknown2 = new EventSet();
+		unknown2.addEvent(new Event("Peter"));
+		unknown2.addEvent(new Event("pumpkin"));
+		unknown2.addEvent(new Event("picked"));
+		unknown2.addEvent(new Event("a"));
+		unknown2.addEvent(new Event("pack"));
+		unknown2.addEvent(new Event("of"));
+		unknown2.addEvent(new Event("pickled"));
+		unknown2.addEvent(new Event("potatoes."));
+		
+		Vector <EventSet> uesv = new Vector<EventSet>();
+		uesv.add(unknown);
+		uesv.add(unknown2);
+		
+		List<List<Pair<String, Double>>> t2 = classifier.analyze(uesv, esv);
+		/*for(int i = 0; i < t2.size(); i++){
+			System.out.println("Classification of unknown #"+(i+1));
+			for(int j =0; j < t2.get(i).size(); j++){
+				System.out.println((j+1)+". "+t2.get(i).get(j).getFirst()+":"+t2.get(i).get(j).getSecond());
+			}
+			System.out.println();
+		}*/
+		
+		assertTrue(t2.get(0).get(0).getFirst().equals("Mary") && t2.get(1).get(0).getFirst().equals("Peter"));
+		
 	}
-
 }
